--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Women's Hub </h1>
 
-<img src="http://www.womensfund.org/files/image/Women-of-Diversity.jpg"  alt = "Diversity in Women" width: 100 height: 50>
+<img src="http://www.womensfund.org/files/image/Women-of-Diversity.jpg"  alt = "Diversity in Women" width: "100" height: "50">
