--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <style>
  
  h1 {
-    font-family: Lobster, Monospace;
-    color:blue;
+    color:green;
+    font-size: 36pt;
+    font-family: serif;
+    
   }
 </style>
 
